Fix fractionally cut off icons. Fixes #9.

--- a/_sass/clickwiki/menu.scss
+++ b/_sass/clickwiki/menu.scss
@@ -11,7 +11,7 @@
     .menu-icon {
         display: inline-block;
         background-repeat: no-repeat;
-        background-size: 64px;
+        background-size: contain;
         background-position: center;
         width: 64px;
         height: 64px;
